@@ -331,7 +331,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
      */
     public void setLocked(int turnoutLockout, boolean locked) {
         boolean firechange = false;
-        if ((turnoutLockout & CABLOCKOUT) > 0 && _cabLockout != locked) {
+        if ((turnoutLockout & CABLOCKOUT) != 0 && _cabLockout != locked) {
             firechange = true;
             if (canLock(CABLOCKOUT)) {
                 _cabLockout = locked;
@@ -339,7 +339,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 _cabLockout = false;
             }
         }
-        if ((turnoutLockout & PUSHBUTTONLOCKOUT) > 0
+        if ((turnoutLockout & PUSHBUTTONLOCKOUT) != 0
                 && _pushButtonLockout != locked) {
             firechange = true;
             if (canLock(PUSHBUTTONLOCKOUT)) {
@@ -736,7 +736,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
 
     //float speedThroughTurnout = 0;
     public float getDivergingLimit() {
-        if ((_divergeSpeed == null) || (_divergeSpeed == "")) {
+        if ((_divergeSpeed == null) || (_divergeSpeed.equals(""))) {
             return -1;
         }
 
@@ -748,7 +748,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
             //return Integer.parseInt(_blockSpeed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
@@ -798,7 +798,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
     }
 
     public float getStraightLimit() {
-        if ((_straightSpeed == null) || (_straightSpeed == "")) {
+        if ((_straightSpeed == null) || (_straightSpeed.equals(""))) {
             return -1;
         }
         String speed = _straightSpeed;
@@ -808,7 +808,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
             return -1;
         }
         try {
-            return new Float(speed);
+            return Float.valueOf(speed);
         } catch (NumberFormatException nx) {
             //considered normal if the speed is not a number.
         }
@@ -863,7 +863,7 @@ public abstract class AbstractTurnout extends AbstractNamedBean implements
                 throw new java.beans.PropertyVetoException(Bundle.getMessage("InUseSensorTurnoutVeto", getDisplayName()), e); //IN18N
             }
         } else if ("DoDelete".equals(evt.getPropertyName())) {
-            //log.info("Call to do delete"); //IN18N
+            log.warn("No clean DoDelete worked for {}", getSystemName()); //IN18N
         }
     }
 
